2002-11-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmProxy/FvwmProxy.c (DrawWindow):
	removed XFillRectangle patch that basically disabled colorset
	backgrounds
	(parse_options):
	use ParseToggleArgument instead of strcmp
	(DrawWindow):
	adjust window title when using mini icon in general but not for a
	particular window

2002-11-16  Jason Weber  <baboon@imonk.com>
	* FvwmProxy/FvwmProxy.c:
	* FvwmProxy/FvwmProxy.1:
	* FvwmProxy/ConfigFvwmProxyDefaults:
	Added config options ShowMiniIcons and LogFile.

2002-11-15  Jason Weber  <baboon@imonk.com>
	* FvwmProxy/FvwmProxy.h:
	* FvwmProxy/FvwmProxy.h:
	* FvwmProxy/FvwmProxy.c:
	Fixed Next to really ignore windows on other desks.
	Added temp fix to use XFillRectangle vs. XClearWindow since the latter
	wasn't using the proper select colorset background color.
	Added .fvwm2rc configs for Width, Height, Separation, EnterSelect, and
	ProxyMove.
	Implemented the 'Prev" command.
	Extended Next/Prev commands to remember where they left off.

	* FvwmProxy/FvwmProxy.1:
	Filled out a lot of the man page

	* FvwmProxy/ConfigFvwmProxyDefaults:
	Added some defaults

2002-11-15  Dan Espen  <dane@mk.telcordia.com>

	* FvwmTheme/FvwmTheme.1: Language check, general edits,
	spell checks.

2002-11-15  Mikhael Goikhman  <migo@homemail.com>

	* FvwmWindowLister/FvwmWindowLister.in:
	* FvwmWindowLister/FvwmWindowLister.1:
	Improvements by Richard Lister with minor changes,
	new options ItemFormat and Function, changed Show/DontShow

2002-11-15  olicha  <olivier.chapuis@free.fr>

	* FvwmForm/FvwmForm.c (ParseActiveMessage):
	Fixed colorset update

2002-11-14  olicha  <olivier.chapuis@free.fr>

	* FvwmTheme/FvwmTheme.1:
	Doc for RootTransparent. More doc for Transparent

	* FvwmScroll/FvwmScroll.c (ErrorHandler):
	(main):
	* FvwmScroll/GrabWindow.c (LoopOnEvents):
	(ProcessMessage):
	(Loop):
	New transparent stuff. split the big loop in 3. Added an X error
	handler

	* FvwmScript/FvwmScript.c (UpdateRootTransparency):
	(ReadXServer):