@@ -1,3 +1,8 @@
+2002-11-19  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmProxy/FvwmProxy.c (ProcessMessage):
+	fixed changing colour sets after FvwmProxy startup
+
 2002-11-18  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmProxy/FvwmProxy.c (DrawWindow):
